Payment section of profile page

--- a/app/views/staff_members/payments.html.erb
+++ b/app/views/staff_members/payments.html.erb
@@ -5,6 +5,27 @@
 </script>
 
  <%= react_component(
-    'StaffMemberProfilePaymentsApp', {}
+    'StaffMemberProfilePaymentsApp',
+    {
+      payments: ActiveModel::Serializer::CollectionSerializer.new(
+        payments,
+        serializer: Api::V1::StaffMemberProfile::PaymentSerializer,
+      ),
+      staffMember: staff_member,
+      accessToken: access_token.token,
+      staffTypes: ActiveModel::Serializer::CollectionSerializer.new(
+        staff_types,
+        serializer: Api::V1::StaffMemberProfile::StaffTypeSerializer,
+      ),
+      venues: venues,
+      accessibleVenueIds: accessible_venue_ids,
+      payRates: pay_rates,
+      accessiblePayRateIds: accessible_pay_rate_ids,
+      genderValues: gender_values,
+      appDownloadLinks: camelized_collection(
+        app_download_link_data,
+        Api::V1::StaffMemberProfile::AppDownloadLinkSerializer
+      )
+    }
   )
 %>
