Fix payment page permission rendering

--- a/app/views/staff_members/payments.html.erb
+++ b/app/views/staff_members/payments.html.erb
@@ -25,7 +25,8 @@
       appDownloadLinks: camelized_collection(
         app_download_link_data,
         Api::V1::StaffMemberProfile::AppDownloadLinkSerializer
-      )
+      ),
+      permissions: Api::V1::StaffMemberProfile::PermissionsSerializer.new(staff_member_profile_permissions)
     }
   )
 %>
