Fix payment tab render

--- a/app/views/staff_members/payments.html.erb
+++ b/app/views/staff_members/payments.html.erb
@@ -26,7 +26,7 @@
         app_download_link_data,
         Api::V1::StaffMemberProfile::AppDownloadLinkSerializer
       ),
-      permissions: Api::V1::StaffMemberProfile::PermissionsSerializer.new(staff_member_profile_permissions)
+      permissionsData: Api::V1::StaffMemberProfile::PermissionsSerializer.new(staff_member_profile_permissions)
     }
   )
 %>
