--- a/app/views/staff_members/index.html.erb
+++ b/app/views/staff_members/index.html.erb
@@ -106,7 +106,7 @@
                 <% if staff_member.master_venue.present? %>
                   <%= link_to staff_member.master_venue.name.titlecase, staff_member_path(id: staff_member.id), class: 'boss-table__link' %>
                 <% else %>
-                  <span>N/A</span>
+                  <%= link_to 'N / A', staff_member_path(id: staff_member.id), class: 'boss-table__link' %>
                 <% end %>
               </p>
             </div>
@@ -119,7 +119,7 @@
                 <% if staff_member.work_venues.present? %>
                   <%= link_to(staff_member.work_venues.map(&:name).join(", "), staff_member_path(id: staff_member.id), class: 'boss-table__link') %>
                 <% else %>
-                  <span>N/A</span>
+                  <%= link_to 'N / A', staff_member_path(id: staff_member.id), class: 'boss-table__link' %>
                 <% end %>
               </p>
             </div>
