Use backend permissions to drive vetting page

--- a/app/views/staff_vetting/index.html.erb
+++ b/app/views/staff_vetting/index.html.erb
@@ -15,5 +15,6 @@
     staff_types,
     serializer: Api::V1::SimpleStaffTypeSerializer
   ),
+  permissions: Api::V1::StaffVettings::PermissionDataSerializer.new(UserAbility.new(current_user))
 })
 %>
