Fix passing of payslip date from server to form

--- a/app/views/staff_members/holidays.html.erb
+++ b/app/views/staff_members/holidays.html.erb
@@ -21,6 +21,8 @@
   estimatedAccruedHolidayDays: estimated_accrued_holiday_days,
   holidayStartDate: UIRotaDate.format(holiday_start_date),
   holidayEndDate: UIRotaDate.format(holiday_end_date),
+  startPayslipDate: holiday_start_payslip_date.present? ? UIRotaDate.format(holiday_start_payslip_date) : nil,
+  endPayslipDate: holiday_end_payslip_date.present? ? UIRotaDate.format(holiday_end_payslip_date) : nil,
   staffTypes: ActiveModel::Serializer::CollectionSerializer.new(
     staff_types,
     serializer: Api::V1::StaffMemberProfile::StaffTypeSerializer,
