--- a/app/views/wtl_client_verification_mailer/verification_email.html.erb
+++ b/app/views/wtl_client_verification_mailer/verification_email.html.erb
@@ -1,4 +1,6 @@
-<p>Hi <%= name %>. You need to validation your email address before you can use your Welcome to Liverpool card. You can do so using the link below</p>
+<p>Hi <%= name %>.<p/>
+
+<p>You need to validate your email address before you can use your <b>Welcome to Liverpool</b> card. You can do so using the link below.</p>
 
 <a href="<%= link_url %>">Verify My Email Address Now</a>
 
