--- a/app/views/wtl/verify/something_went_wrong.html.erb
+++ b/app/views/wtl/verify/something_went_wrong.html.erb
@@ -13,7 +13,7 @@
         <!-- Modal window start -->
         <div class="boss-modal-window boss-modal-window_role_wtl-ev-error">
           <div class="boss-modal-window__header">
-            <h2 class="boss-modal-window__title">Validation failed!</h2>
+            <h2 class="boss-modal-window__title">Verification failed!</h2>
           </div>
 
           <div class="boss-modal-window__content">
