Add `universities` list to wtl clients page

--- a/app/views/wtl_clients/index.html.erb
+++ b/app/views/wtl_clients/index.html.erb
@@ -3,5 +3,6 @@
   clients: ActiveModel::Serializer::CollectionSerializer.new(
     wtl_clients,
     serializer: Api::V1::WtlClients::WtlClientSerializer,
-  )
+  ),
+  universities: universities,
 }) %>
