Add background image to verify email views

--- a/app/views/wtl/verify/something_went_wrong.html.erb
+++ b/app/views/wtl/verify/something_went_wrong.html.erb
@@ -1,4 +1,4 @@
-<div class="boss-body boss-body_type_background" style="background-image: url(../images/bg-wtl-1.jpg)">
+<div class="boss-body boss-body_type_background" style="background-image: url(<%= image_path('bg-wtl-1.jpg') %>)">
   <header class="boss-page-header boss-page-header_adjust_security">
     <div class="boss-page-header__inner">
       <div class="boss-page-header__group boss-page-header__group_role_logo-center">
