--- a/app/views/wtl/verify/verify.html.erb
+++ b/app/views/wtl/verify/verify.html.erb
@@ -1,30 +1,32 @@
-<header class="boss-page-header boss-page-header_adjust_security">
-  <div class="boss-page-header__inner">
-    <div class="boss-page-header__group boss-page-header__group_role_logo-center">
-      <p class="boss-page-header__logo">Welcome to Liverpool</p>
+<div class="boss-body boss-body_type_background" style="background-image: url(<%= image_path('bg-wtl-1.jpg') %>)">
+  <header class="boss-page-header boss-page-header_adjust_security">
+    <div class="boss-page-header__inner">
+      <div class="boss-page-header__group boss-page-header__group_role_logo-center">
+        <p class="boss-page-header__logo">Welcome to Liverpool</p>
+      </div>
     </div>
-  </div>
-</header>
-<!-- Page header end -->
+  </header>
+  <!-- Page header end -->
 
-<!-- Page main container start -->
-<main class="boss-page-main">
-  <div class="boss-page-main__content">
-    <div class="boss-page-main__inner">
-      <!-- Modal window start -->
-      <div class="boss-modal-window boss-modal-window_role_wtl-ev-success">
-        <div class="boss-modal-window__header">
-          <h2 class="boss-modal-window__title">Success!</h2>
-        </div>
+  <!-- Page main container start -->
+  <main class="boss-page-main">
+    <div class="boss-page-main__content">
+      <div class="boss-page-main__inner">
+        <!-- Modal window start -->
+        <div class="boss-modal-window boss-modal-window_role_wtl-ev-success">
+          <div class="boss-modal-window__header">
+            <h2 class="boss-modal-window__title">Success!</h2>
+          </div>
 
-        <div class="boss-modal-window__content">
-          <div class="boss-modal-window__message-block">
-            <p class="boss-modal-window__message-text">Your email address was validated successfully.<p>
-            <p class="boss-modal-window__message-text">Your card is now ready to use.</p>
+          <div class="boss-modal-window__content">
+            <div class="boss-modal-window__message-block">
+              <p class="boss-modal-window__message-text">Your email address was validated successfully.<p>
+              <p class="boss-modal-window__message-text">Your card is now ready to use.</p>
+            </div>
           </div>
         </div>
+        <!-- Modal window end -->
       </div>
-      <!-- Modal window end -->
     </div>
-  </div>
-</main>
+  </main>
+</div>
