--- a/app/views/accessories/index.html.erb
+++ b/app/views/accessories/index.html.erb
@@ -1,4 +1,5 @@
 <%= react_component('AccessoriesApp', {
   accessToken: access_token,
   currentVenue: current_venue,
+  permissions: permissions,
 }) %>
